# molecular-converter

./: EXERCISES.md  README.md  TODO.md  converted_7lcj.cif  pyproject.toml
data/mmcif_files/: 1bl1.cif  1ewt.cif  1ewv.cif  1isr.cif  1iss.cif  2e4u.cif  2l27.cif  2pzx.cif  3aqf.cif  3ehs.cif  3ks9.cif  3n94.cif  4ea3.cif  4rml.cif  4xaq.cif  4xas.cif  5c5c.cif  5cni.cif  5cnj.cif  5gwm.cif  5ii0.cif  5kzn.cif  5kzq.cif  6b7h.cif  6pfo.cif  6pgq.cif  6umg.cif  7wy5.cif  7wy8.cif  7x10.cif  8b55.cif
molecular_converter/: __init__.py  cli.py  exceptions.py  paths.py  utils.py
scripts/: cif2pdb.py
tests/: test_cli.py
