[tool.poetry]
name = "molecular_converter"
version = "0.1.0"
description = "A CLI tool to seamlessly convert between various molecular file formats such as PDB, MOL2, mmCIF and many more."
authors = ["Mark Fingerhuth <mark@proteinqure.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
