[tool.poetry]
name = "molecular_converter"
version = "0.1.0"
description = "A CLI tool to seamlessly convert between various molecular file formats such as PDB, MOL2, mmCIF and many more."
authors = ["Mark Fingerhuth <mark@proteinqure.com>"]
packages = [
    { include = "molecular_converter" },
]


[tool.poetry.dependencies]
python = "^3.9"
biopython = "^1.81"
typer = "^0.9.0"
plumbum = "^1.8.1"
pytest = "^7.3.1"
joblib = "^1.2.0"
black = "^23.3.0"


[tool.poetry.dev-dependencies]
pudb = "^2022.1.3"


[tool.poetry.scripts]
molconverter = "molecular_converter.cli:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
